# web-uap

./: .pdm-python  README.md  pyproject.toml  requirements.txt
src/: klasifikasi.py  klasifikasi_bunga.py  klasifikasi_ggnet.py
