[project]
name = "UAP_umi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "AndiAswad", email = "andi.aswad88@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
src = "src"

[tool.pdm.scripts]
start = "streamlit run ./src/klasifikasi.py"